# sway-display-switch

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: Sway.cpp  Sway.h  main.cpp
src/ui/: FontManager.cpp  FontManager.h  GUI.cpp  GUI.h  Icons.h  Output.cpp  Output.h
